--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,10 +23,9 @@ jobs:
       - name: 'Az CLI login'
         uses: azure/login@v1
         with:
-            client-id: ${{ secrets.AZURE_CLIENT_ID }}
-            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          enable-AzPSSession: true 
+
   
       - name: Terraform Init
         id: init
